--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ out/
 
 ### Querydsl build file ###
 **/src/main/generated/
+
+### Security yaml ###
+**/src/main/resources/application-oauth.yaml/
