--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -56,7 +56,10 @@ localwelfare:
   client:
     serviceKey: ${LOCAL_WELFARE_SERVICEKEY}
 
-
+jwt:
+  header: Authorization
+  secret: ${JWT_SECRET}
+  token-validity-in-seconds: 86400
 
 
 
